<?xml version="1.0"?>
<package>
  <name>step_voice_libs</name>
  <version>1.0.0</version>
  <description>The step_voice_libs</description>
  <maintainer email="marcinmuminski@gmail.com">muminski</maintainer>
 <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>libespeak-dev</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>libespeak-dev</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
  </export>
</package>
